@@ -1186,6 +1186,8 @@ init|;
 name|i
 operator|<
 name|length
+operator|-
+literal|1
 condition|;
 name|i
 operator|++
@@ -1719,7 +1721,7 @@ init|=
 name|length
 init|;
 name|i
-operator|>=
+operator|>
 literal|0
 condition|;
 name|i
